email рассылка кошулууда

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,11 @@ spring.datasource.password=mars
 spring.jooq.sql-dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.show-sql=true
+
+
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=d3c01b169d0694
+spring.mail.password=1fe30042543223
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
